# G4LumaCam

./: .gitignore  CHANGELOG.md  DETECTOR_MODELS.md  LICENSE.md  PHYSICS_MODELS_DESIGN.md  README.md  RELEASE_NOTES.md  pixi.toml  pyproject.toml  setup.py  test_detector_groupby.py  test_detector_models.py  test_groupby_fix.py
.documents/: BLOB_VS_GAIN.md  DETECTOR_MODELS.md  DETECTOR_MODELS_SUMMARY.md  PR_DESCRIPTION.md  README.md  RELEASE_STEPS.md  TECHNICAL_SUMMARY.md
examples/notebooks/: G4LumaCam_Tutorial.ipynb  detector_models_comparison.ipynb  microscope_setup_tutorial.ipynb
examples/notebooks/legacy/: tutorial.ipynb
examples/scripts/: introduction.py
notebooks/: G4LumaCam_lens_focusing.ipynb  detector_models_comparison.ipynb  detector_models_demo.ipynb  microscope_setup_tutorial.ipynb  tutorial.ipynb
notebooks/tutorial_archive/: README.md
notebooks/tutorial_archive/focus_10mm/: macro.mac
notebooks/tutorial_archive/focus_20mm/: macro.mac
notebooks/tutorial_archive/focus_20mm/TracedPhotons/: traced_sim_data_0.csv
notebooks/tutorial_archive/neutrons/: binned.empirevent  macro.mac
notebooks/tutorial_archive/neutrons/EventFiles/: traced_sim_data_0.empirevent
notebooks/tutorial_archive/neutrons/EventResults/: batch_0_results.csv
notebooks/tutorial_archive/neutrons/PhotonFiles/: traced_sim_data_0.empirphot
notebooks/tutorial_archive/neutrons/SimPhotons/: macro.mac
notebooks/tutorial_archive/neutrons/TracedPhotons/: traced_sim_data_0.csv
notebooks/tutorial_archive/point_neutrons/: macro.mac
scripts/: build_simulation.sh  detect_empir.sh
src/G4LumaCam/: .gitignore  CMakeLists.txt  EventProcessor.cc  EventProcessor.hh  GeometryConstructor.cc  GeometryConstructor.hh  LumaCamMessenger.cc  LumaCamMessenger.hh  MaterialBuilder.cc  MaterialBuilder.hh  ParticleGenerator.cc  ParticleGenerator.hh  SimConfig.cc  SimConfig.hh  SimulationManager.cc  SimulationManager.hh  compat_timespec_get.hh  main.cc
src/G4LumaCam/include/: GeometryConstructor.hh  LumaCamMessenger.hh  SimConfig.hh
src/G4LumaCam/src/: EventProcessor.cc  GeometryConstructor.cc  LumaCamMessenger.cc  MaterialBuilder.cc  ParticleGenerator.cc  SimConfig.cc  SimulationManager.cc  main.cc
src/lumacam/: __init__.py  analysis.py  empir.py  optics.py  simulate.py
src/lumacam/config/: empir_params.py
src/lumacam/data/: JP1985-040604_Example01P_50mm_1.2f.zmx
src/lumacam/simulations/: g4config.py  g4runner.py  optics.py
test_groupby/detector_model/: .groupby_metadata.json
test_groupby/detector_model/test1/SimPhotons/: macro.mac
test_groupby/detector_model/test1/TempOpm/: temp_refocus_zscan_0_zfine_12.75.roa
test_groupby/detector_model/test1/TracedPhotons/: traced_sim_data_0.csv
test_groupby/detector_model/test1/tpx3Files/: traced_data_0.tpx3
test_groupby/detector_model/test2/TempOpm/: temp_refocus_zscan_0_zfine_12.75.roa
testing/: write_macros.py
(+6 files in other folders)
