[project]
name = "g4lumacam"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander M. Long", email = "alexlong@lanl.gov"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rayoptics (>=0.9.5,<0.10.0)",
    "lmfit (>=1.3.3,<2.0.0)"
]
packages = [
    {include = "lumacam", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"